snippets/manifests/ingresses/ingress-echo-server-class.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-server
spec:
  ingressClassName: nginx
  rules:
    - host: echo.example.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo-server
                port:
                  name: http
